# circuit_build

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/data/: mem_test.json  trace.json
src/mem_gen/: mod.rs
src/r1cs/: constraint_system.rs  mod.rs
src/read_file/: mod.rs
