[package]
name = "cs_build"
version = "0.1.0"
edition = "2021"
authors = ["fox contributors"]
description = " A library for building rank-one constraint systems"
repository = "https://github.com/Fox-Chain/zkFOAKS"
keywords = ["zkFOAKS","zero-knowledge","R1CS","cryptography"]



[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
ark-test-curves = { version = "^0.3.0", default-features = false, features = [ "bls12_381_scalar_field" ] }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "tracing-subscriber", "tracing/std" ]
